<resources>
    <string name="app_name">CocktailsMyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="path_main_domain">android.resource://com.example.cocktailsmyapp/</string>
    <string name="new_cocktail">new cocktail</string>
    <string name="new_description">new description cocktail</string>
    <string name="new_recipe">new recipe cocktail</string>
    <string name="show_popUp">showPopUp</string>
    <string name="title_field">Title</string>
    <string name="description_field">Description</string>
    <string name="plus">+</string>
    <string name="recipe_field">Recipe</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_cocktail">Title Cocktail</string>
    <string name="ingredients_field">Ingredients</string>
    <string name="recipe_description_field">Recipe_description</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="my_cocktails_title">My Cocktails</string>
    <string name="add_ingredient_popup">Add Ingredient</string>
    <string name="tag_name">Tag Name</string>
    <string name="add_button">Add</string>
    <string name="float_button">float button</string>
</resources>