<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clipToOutline="false"
    tools:context=".screens.addcocktail.PopUpIngredientFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_pop_up_ingredient"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/add_ingredient_popup"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingredient_name_layout"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/tag_name"
        app:layout_constraintEnd_toEndOf="@+id/title_pop_up_ingredient"
        app:layout_constraintStart_toStartOf="@+id/title_pop_up_ingredient"
        app:layout_constraintTop_toBottomOf="@+id/title_pop_up_ingredient">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredient_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_add_ingredient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add_button"
        app:layout_constraintEnd_toEndOf="@+id/ingredient_name_layout"
        app:layout_constraintStart_toStartOf="@+id/ingredient_name_layout"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_name_layout" />

    <Button
        android:id="@+id/button_cancel_pop_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_add_ingredient"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_add_ingredient"
        app:layout_constraintTop_toBottomOf="@+id/button_add_ingredient"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>